--- a/src/ui/MainWindow.ui
+++ b/src/ui/MainWindow.ui
@@ -51,7 +51,7 @@
      <x>0</x>
      <y>0</y>
      <width>1024</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuMGround">
@@ -84,6 +84,9 @@
     <addaction name="separator"/>
    </widget>
    <widget class="QMenu" name="menuTools">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="title">
      <string>Tool Widgets</string>
     </property>
