--- a/files/styles/style-outdoor.css
+++ b/files/styles/style-outdoor.css
@@ -74,17 +74,16 @@ border: 1px solid #111111;
      margin: 0 3px 0px 3px;
      padding: 0 3px 0px 0px;
      font: bold 8px;
-     color: #DDDDDF;
- }
- 
- QMainWindow::separator {
-     background: #090909;
-     width: 2px; /* when vertical */
-     height: 2px; /* when horizontal */
+     color: #111111;
  }
 
- QMainWindow::separator:hover {
-     background: white;
+ QMainWindow::separator {
+    background-color: #323235;
+    width: 4px; /* when vertical */
+    height: 4px; /* when horizontal */
+ }
+ QMainWindow::separator:hover { 
+    background: rgb(0, 0, 255);
  }
 
 QMenuBar::item:disabled {
