--- a/files/styles/style-outdoor.css
+++ b/files/styles/style-outdoor.css
@@ -20,13 +20,13 @@ QCheckBox {
 color: #222221;
 }
 
-QCheckBox::indicator {
+/*QCheckBox::indicator {
     border: 1px solid #111111;
     border-radius: 2px;
     color: #222221;
          width: 10px;
      height: 10px;
-}
+}*/
 
 QLineEdit {
 border: 1px solid #111111;
@@ -48,7 +48,7 @@ border: 1px solid #111111;
     border-radius: 2px;
     }
 
- QCheckBox::indicator:checked {
+/* QCheckBox::indicator:checked {
      background-color: #333333;
  }
 
@@ -66,7 +66,7 @@ border: 1px solid #111111;
 
  QCheckBox::indicator:indeterminate:pressed {
      image: url(:/files/images/checkbox_indeterminate_pressed.png);
- }
+ }*/
 
  QGroupBox::title {
      subcontrol-origin: margin;
