--- a/src/ui/configuration/ApmHardwareConfig.ui
+++ b/src/ui/configuration/ApmHardwareConfig.ui
@@ -24,13 +24,13 @@
      </property>
      <property name="minimumSize">
       <size>
-       <width>200</width>
+       <width>230</width>
        <height>0</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
-       <width>175</width>
+       <width>230</width>
        <height>16777215</height>
       </size>
      </property>
@@ -42,7 +42,7 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>198</width>
+        <width>228</width>
         <height>807</height>
        </rect>
       </property>
@@ -56,7 +56,13 @@
           <widget class="QPushButton" name="firmwareButton">
            <property name="minimumSize">
             <size>
-             <width>100</width>
+             <width>190</width>
+             <height>35</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>190</width>
              <height>35</height>
             </size>
            </property>
@@ -69,7 +75,13 @@
           <widget class="QPushButton" name="manditoryHardware">
            <property name="minimumSize">
             <size>
-             <width>100</width>
+             <width>190</width>
+             <height>35</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>190</width>
              <height>35</height>
             </size>
            </property>
@@ -85,7 +97,13 @@
           <widget class="QPushButton" name="frameTypeButton">
            <property name="minimumSize">
             <size>
-             <width>100</width>
+             <width>190</width>
+             <height>35</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>190</width>
              <height>35</height>
             </size>
            </property>
@@ -101,7 +119,13 @@
           <widget class="QPushButton" name="compassButton">
            <property name="minimumSize">
             <size>
-             <width>100</width>
+             <width>190</width>
+             <height>35</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>190</width>
              <height>35</height>
             </size>
            </property>
@@ -114,7 +138,13 @@
           <widget class="QPushButton" name="accelCalibrateButton">
            <property name="minimumSize">
             <size>
-             <width>100</width>
+             <width>190</width>
+             <height>35</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>190</width>
              <height>35</height>
             </size>
            </property>
@@ -133,7 +163,13 @@
           <widget class="QPushButton" name="arduPlaneLevelButton">
            <property name="minimumSize">
             <size>
-             <width>100</width>
+             <width>190</width>
+             <height>35</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>190</width>
              <height>35</height>
             </size>
            </property>
@@ -152,14 +188,14 @@
           <widget class="QPushButton" name="radioCalibrateButton">
            <property name="minimumSize">
             <size>
-             <width>100</width>
+             <width>190</width>
              <height>35</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>16777215</width>
-             <height>16777215</height>
+             <width>190</width>
+             <height>35</height>
             </size>
            </property>
            <property name="text">
@@ -177,7 +213,13 @@
           <widget class="QPushButton" name="flightModesButton">
            <property name="minimumSize">
             <size>
-             <width>100</width>
+             <width>190</width>
+             <height>35</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>190</width>
              <height>35</height>
             </size>
            </property>
@@ -190,7 +232,13 @@
           <widget class="QPushButton" name="failSafeButton">
            <property name="minimumSize">
             <size>
-             <width>100</width>
+             <width>190</width>
+             <height>35</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>190</width>
              <height>35</height>
             </size>
            </property>
@@ -203,7 +251,13 @@
           <widget class="QPushButton" name="optionalHardwareButton">
            <property name="minimumSize">
             <size>
-             <width>100</width>
+             <width>190</width>
+             <height>35</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>190</width>
              <height>35</height>
             </size>
            </property>
@@ -219,7 +273,13 @@
           <widget class="QPushButton" name="radio3DRButton">
            <property name="minimumSize">
             <size>
-             <width>100</width>
+             <width>190</width>
+             <height>35</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>190</width>
              <height>35</height>
             </size>
            </property>
@@ -232,12 +292,18 @@
           <widget class="QPushButton" name="batteryMonitorButton">
            <property name="minimumSize">
             <size>
-             <width>100</width>
+             <width>190</width>
+             <height>35</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>190</width>
              <height>35</height>
             </size>
            </property>
            <property name="text">
-            <string>               Battery Monitor</string>
+            <string>          Battery Monitor</string>
            </property>
           </widget>
          </item>
@@ -245,7 +311,13 @@
           <widget class="QPushButton" name="sonarButton">
            <property name="minimumSize">
             <size>
-             <width>100</width>
+             <width>190</width>
+             <height>35</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>190</width>
              <height>35</height>
             </size>
            </property>
@@ -258,7 +330,13 @@
           <widget class="QPushButton" name="airspeedButton">
            <property name="minimumSize">
             <size>
-             <width>100</width>
+             <width>190</width>
+             <height>35</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>190</width>
              <height>35</height>
             </size>
            </property>
@@ -271,7 +349,13 @@
           <widget class="QPushButton" name="opticalFlowButton">
            <property name="minimumSize">
             <size>
-             <width>100</width>
+             <width>190</width>
+             <height>35</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>190</width>
              <height>35</height>
             </size>
            </property>
@@ -284,7 +368,13 @@
           <widget class="QPushButton" name="osdButton">
            <property name="minimumSize">
             <size>
-             <width>100</width>
+             <width>190</width>
+             <height>35</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>190</width>
              <height>35</height>
             </size>
            </property>
@@ -297,7 +387,13 @@
           <widget class="QPushButton" name="cameraGimbalButton">
            <property name="minimumSize">
             <size>
-             <width>100</width>
+             <width>190</width>
+             <height>35</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>190</width>
              <height>35</height>
             </size>
            </property>
@@ -310,7 +406,13 @@
           <widget class="QPushButton" name="antennaTrackerButton">
            <property name="minimumSize">
             <size>
-             <width>100</width>
+             <width>190</width>
+             <height>35</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>190</width>
              <height>35</height>
             </size>
            </property>
