--- a/src/ui/configuration/ArduCopterPidConfig.ui
+++ b/src/ui/configuration/ArduCopterPidConfig.ui
@@ -31,8 +31,8 @@
     <rect>
      <x>120</x>
      <y>540</y>
-     <width>75</width>
-     <height>23</height>
+     <width>131</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -42,10 +42,10 @@
   <widget class="QPushButton" name="refreshPushButton">
    <property name="geometry">
     <rect>
-     <x>220</x>
+     <x>290</x>
      <y>540</y>
-     <width>91</width>
-     <height>23</height>
+     <width>131</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -57,8 +57,8 @@
     <rect>
      <x>10</x>
      <y>70</y>
-     <width>695</width>
-     <height>401</height>
+     <width>711</width>
+     <height>428</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
@@ -107,7 +107,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="rateYawPSpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="minimum">
               <double>-10000.000000000000000</double>
@@ -120,7 +120,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="rateYawISpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="minimum">
               <double>-10000.000000000000000</double>
@@ -133,7 +133,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="rateYawDSpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="minimum">
               <double>-10000.000000000000000</double>
@@ -184,7 +184,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="loiterPidPSpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="minimum">
               <double>-10000.000000000000000</double>
@@ -246,7 +246,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="ratePitchPSpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="minimum">
               <double>-10000.000000000000000</double>
@@ -259,7 +259,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="ratePitchISpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="minimum">
               <double>-10000.000000000000000</double>
@@ -272,7 +272,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="ratePitchDSpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="minimum">
               <double>-10000.000000000000000</double>
@@ -323,7 +323,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="stabilRollPSpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="minimum">
               <double>-10000.000000000000000</double>
@@ -364,7 +364,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="stabilPitchPSpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="maximum">
               <double>100.000000000000000</double>
@@ -423,7 +423,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="rateRollPSpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="minimum">
               <double>-10000.000000000000000</double>
@@ -436,7 +436,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="rateRollISpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="minimum">
               <double>-10000.000000000000000</double>
@@ -449,7 +449,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="rateRollDSpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="minimum">
               <double>-10000.000000000000000</double>
@@ -500,7 +500,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="altitudeHoldPSpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="minimum">
               <double>-10000.000000000000000</double>
@@ -541,7 +541,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="stabilYawPSpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="minimum">
               <double>-10000.000000000000000</double>
@@ -603,7 +603,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="rateLoiterPSpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="minimum">
               <double>-10000.000000000000000</double>
@@ -616,7 +616,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="rateLoiterISpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="minimum">
               <double>-10000.000000000000000</double>
@@ -629,7 +629,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="rateLoiterDSpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="minimum">
               <double>-10000.000000000000000</double>
@@ -666,7 +666,7 @@
     <item row="4" column="2">
      <layout class="QVBoxLayout" name="verticalLayout_37">
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_13">
+       <layout class="QHBoxLayout" name="horizontalLayout_13" stretch="2,3">
         <item>
          <widget class="QLabel" name="label_4">
           <property name="text">
@@ -690,23 +690,9 @@
         </item>
         <item>
          <widget class="QDoubleSpinBox" name="ch6MinSpinBox">
-          <property name="minimum">
-           <double>-10000.000000000000000</double>
+          <property name="decimals">
+           <number>4</number>
           </property>
-          <property name="maximum">
-           <double>10000.000000000000000</double>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLabel" name="label_8">
-          <property name="text">
-           <string>Max</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QDoubleSpinBox" name="ch6MaxSpinBox">
           <property name="minimum">
            <double>-10000.000000000000000</double>
           </property>
@@ -718,7 +704,31 @@
        </layout>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_14">
+       <layout class="QHBoxLayout" name="horizontalLayout_17">
+        <item>
+         <widget class="QLabel" name="label_8">
+          <property name="text">
+           <string>Max</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QDoubleSpinBox" name="ch6MaxSpinBox">
+          <property name="decimals">
+           <number>4</number>
+          </property>
+          <property name="minimum">
+           <double>-10000.000000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>10000.000000000000000</double>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_14" stretch="2,3">
         <item>
          <widget class="QLabel" name="label_5">
           <property name="text">
@@ -732,7 +742,7 @@
        </layout>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_15">
+       <layout class="QHBoxLayout" name="horizontalLayout_15" stretch="2,3">
         <item>
          <widget class="QLabel" name="label_9">
           <property name="text">
@@ -792,7 +802,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="throttleAccelPSpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="minimum">
               <double>-10000.000000000000000</double>
@@ -805,7 +815,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="throttleAccelISpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="minimum">
               <double>-10000.000000000000000</double>
@@ -818,7 +828,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="throttleAccelDSpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="minimum">
               <double>-10000.000000000000000</double>
@@ -889,7 +899,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="throttleRatePSpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="minimum">
               <double>-10000.000000000000000</double>
@@ -902,7 +912,7 @@
            <item>
             <widget class="QDoubleSpinBox" name="throttleDateDSpinBox">
              <property name="decimals">
-              <number>3</number>
+              <number>4</number>
              </property>
              <property name="minimum">
               <double>-10000.000000000000000</double>
