Rename Perspectives to Views Rename Views to reflect APM ToolBar

--- a/src/ui/MainWindow.ui
+++ b/src/ui/MainWindow.ui
@@ -51,7 +51,7 @@
      <x>0</x>
      <y>0</y>
      <width>1024</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuMGround">
@@ -105,7 +105,7 @@
    </widget>
    <widget class="QMenu" name="menuPerspectives">
     <property name="title">
-     <string>Perspectives</string>
+     <string>Views</string>
     </property>
     <addaction name="actionMissionView"/>
     <addaction name="actionFlightView"/>
@@ -292,7 +292,7 @@
      <normaloff>:/files/images/categories/applications-internet.svg</normaloff>:/files/images/categories/applications-internet.svg</iconset>
    </property>
    <property name="text">
-    <string>Mission</string>
+    <string>Flight Data</string>
    </property>
    <property name="shortcut">
     <string>Meta+O</string>
@@ -346,7 +346,7 @@
      <normaloff>:/files/images/status/network-wireless-encrypted.svg</normaloff>:/files/images/status/network-wireless-encrypted.svg</iconset>
    </property>
    <property name="text">
-    <string>Flight</string>
+    <string>Flight Plan</string>
    </property>
    <property name="shortcut">
     <string>Meta+P</string>
@@ -481,7 +481,7 @@
      <normaloff>:/files/images/categories/preferences-system.svg</normaloff>:/files/images/categories/preferences-system.svg</iconset>
    </property>
    <property name="text">
-    <string>Hardware</string>
+    <string>Intial Setup</string>
    </property>
    <property name="toolTip">
     <string>Configuration options of the vehicle.</string>
@@ -516,7 +516,7 @@
      <normaloff>:/files/images/categories/applications-system.svg</normaloff>:/files/images/categories/applications-system.svg</iconset>
    </property>
    <property name="text">
-    <string>Software</string>
+    <string>Config/Tuning</string>
    </property>
   </action>
   <action name="actionTerminalView">
