--- a/src/ui/configuration/ApmSoftwareConfig.ui
+++ b/src/ui/configuration/ApmSoftwareConfig.ui
@@ -63,6 +63,19 @@
           </widget>
          </item>
          <item>
+          <widget class="QPushButton" name="basicPidButton">
+           <property name="minimumSize">
+            <size>
+             <width>100</width>
+             <height>35</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Basic Pids</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QPushButton" name="arduCopterPidButton">
            <property name="minimumSize">
             <size>
